WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284793
REGRESSION(
287911@main
): [Win] ASSERTION FAILED: !(*JSC::addressOfJSCConfig()).isPermanentlyFrozen()
https://bugs.webkit.org/show_bug.cgi?id=284793
Summary
REGRESSION(287911@main): [Win] ASSERTION FAILED: !(*JSC::addressOfJSCConfig()...
Fujii Hironori
Reported
2024-12-16 19:01:27 PST
[Win] ASSERTION FAILED: !(*JSC::addressOfJSCConfig()).isPermanentlyFrozen() Windows Release & Debug layout tests are crashing after
287911@main
. Buildbot: builder Windows-64-bit-Release-Tests build 1898 :
287912@main
https://build.webkit.org/#/builders/1191/builds/1898
ASSERTION FAILED: !(*JSC::addressOfJSCConfig()).isPermanentlyFrozen() C:\webkit\wb\Source\JavaScriptCore\runtime/Options.cpp(1124) : static bool JSC::Options::setOptions(const char *) 1 00007FFBDC5402FD JSC::Options::setOptions 2 00007FFBD79D80A0 WTR::InjectedBundle::didReceiveMessageToPage 3 00007FFBD79D7D96 WTR::InjectedBundle::didReceiveMessageToPage 4 00007FFBE97968AE WebKit::InjectedBundleClient::didReceiveMessageToPage 5 00007FFBE9795FCE WebKit::InjectedBundle::didReceiveMessageToPage 6 00007FFBE9A2DB3F WebKit::WebPage::postInjectedBundleMessage 7 00007FFBE836C62A IPC::callMemberFunction<WebKit::WebPage,WebKit::WebPage,void (const WTF::String &, const WebKit::UserData &),std::tuple<WTF::String,WebKit::UserData> >::<lambda_1>::operator()<WTF::String,WebKit::UserData> 8 00007FFBE836C5E7 std::invoke<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',WTF::String,WebKit::UserData> 9 00007FFBE836C5AE std::_Apply_impl<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',std::tuple<WTF::String,WebKit::UserData>,0,1> 10 00007FFBE836C562 std::apply<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\HandleMessage.h:132:9',std::tuple<WTF::String,WebKit::UserData> > 11 00007FFBE836C51F IPC::callMemberFunction<WebKit::WebPage,WebKit::WebPage,void (const WTF::String &, const WebKit::UserData &),std::tuple<WTF::String,WebKit::UserData> > 12 00007FFBE832FE20 IPC::handleMessage<Messages::WebPage::PostInjectedBundleMessage,IPC::Connection,WebKit::WebPage,WebKit::WebPage,void (const WTF::String &, const WebKit::UserData &)> 13 00007FFBE83151B7 WebKit::WebPage::didReceiveMessage 14 00007FFBE8EABD3D IPC::MessageReceiverMap::dispatchMessage 15 00007FFBE8ECC4B0 WebKit::AuxiliaryProcess::dispatchMessage 16 00007FFBE811C7C9 WebKit::AuxiliaryProcess::didReceiveMessage 17 00007FFBE824CE47 WebKit::WebProcess::didReceiveMessage 18 00007FFBE8E7B519 IPC::Connection::dispatchMessage 19 00007FFBE8E7B783 IPC::Connection::dispatchMessage 20 00007FFBE8E7BAFC IPC::Connection::dispatchOneIncomingMessage 21 00007FFBE8E8122B IPC::Connection::enqueueIncomingMessage::<lambda_7>::operator() 22 00007FFBE8E811C7 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\Source\WebKit\Platform\IPC\Connection.cpp:1343:31',void>::call 23 00007FFBDB4DED9C WTF::Function<void ()>::operator() 24 00007FFBDCEE1452 WTF::RunLoop::performWork 25 00007FFBDD07DE38 WTF::RunLoop::wndProc 26 00007FFBDD07DD43 WTF::RunLoop::RunLoopWndProc 27 00007FFCDC7383F1 DispatchMessageW 28 00007FFCDC737EB1 DispatchMessageW 29 00007FFBDD07E0B2 WTF::RunLoop::run 30 00007FFBE7E528A3 WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess,1>::run 31 00007FFBE7E52757 WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWin> Exception thrown at 0x00007FFBDCE55BC5 (JavaScriptCore.dll) in WebKitWebProcess.exe: 0xC0000005: Access violation writing location 0x00000000BBADBEEF.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-12-16 21:08:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38055
EWS
Comment 2
2024-12-16 21:25:02 PST
Committed
287926@main
(d46c14cf9008): <
https://commits.webkit.org/287926@main
> Reviewed commits have been landed. Closing PR #38055 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-16 21:26:13 PST
<
rdar://problem/141593459
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug