REGRESSION(287911@main): [Win] ASSERTION FAILED: !(*JSC::addressOfJSCConfig()).isPermanentlyFrozen() https://bugs.webkit.org/show_bug.cgi?id=284793

Unreviewed crash fix for Windows port.

Windows Release & Debug layout tests were crashing after
<https://commits.webkit.org/287911@main>. It added a new config
ReservedByteForAllocationProfilingMode. But, no storage was allocated
for it if USE(SYSTEM_MALLOC). It overwrapped with the storage of
g_wtfConfig.

* Source/WTF/wtf/WTFConfig.h:

Canonical link: https://commits.webkit.org/287926@main